--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,6 @@
+body {
+  overflow-x: hidden !important;
+}
 
 .color-bar {
     width: 100vw;
@@ -11,6 +14,7 @@
 }
 
 .loading {
+  width: 100%;
   height: 100vh;
   text-align: center;
   svg {
